# hmc

./: .gitignore  Dataset.ipynb  Executer-model.ipynb  Executer.ipynb  Inference.ipynb  LICENSE  Metadata.ipynb  README.md  Untitled.ipynb  executer.py  pyproject.toml  requirements.txt  run.py  run.sh  sabotage-executer.py  setup.py
.virtual_documents/: Dataset.ipynb  Executer.ipynb  Metadata.ipynb
.virtual_documents/Notebooks/: 1 - Validate-Muscics.ipynb  2 - Extract-Structure.ipynb  3 - Convert-Labels.ipynb  Preprocessing.ipynb
Notebooks/: 1 - Generate-Labels.ipynb  1 - Preprocessing.ipynb  1 - Validate-Muscics.ipynb  2 - Extract-Structure.ipynb  2 - Extract-features.ipynb  2 - Extract_features.ipynb  2 - Feature_Extraction.ipynb  3 - Convert-Labels.ipynb  3 - Generate-TFrecords.ipynb  3 - Train.ipynb  Exploring_Metadata.ipynb  Exploring_Musics.ipynb  Exploring_files.ipynb  Extract-features.ipynb  Get_features.ipynb  Preprocessing.ipynb  Train-CNN.ipynb  Train-Hiclass.ipynb
Notebooks/.ipynb_checkpoints/: 1 - Generate-Labels-checkpoint.ipynb  1 - Validate-Muscics-checkpoint.ipynb  2 - Feature_Extraction-checkpoint.ipynb  2 - Preprocessing-checkpoint.ipynb  3 - Train-checkpoint.ipynb  Exploring_Metadata-checkpoint.ipynb  Exploring_Musics-checkpoint.ipynb  (+2 more)
Scripts/: 1 - Generate-Labels.py  2 - Feature-Extraction.py  3 - Load-Features.py  3 - Train.py
notebooks/: 1 - Validate-Muscics.ipynb  3 - Generate-TFrecords.ipynb  Exploring_Metadata.ipynb
sabotage/: dataset.py  executer.py  main.py  model.py  prediction.py  teste.py  train.py  training.py
(+55 files in other folders)
